# drake-tamp

./: .env  .gitignore  .gitmodules  Dockerfile  README.md  integrate_planner.py  lifted_search.py  random-dset.txt  run_planner.sh  test_hard_single_place.py  test_hash.py  test_planning_sampling.py
docker_scripts/: .tmux.conf  .vimrc  Dockerfile  Dockerfile.base  Dockerfile.dev  build_singularity_image.sh  docker_build.sh  docker_run.sh  drake-tamp-sing.def  entrypoint.sh  requirements.txt
experiments/: collect-labels.sh  export_data.py  logparse.py  logsproblem.yaml  logsstats.json  main.py  random-dset.txt  run.sh  run_lifted.py  scenerios.py  shared.py  shared_ploi.py  test.py  test_problem.yaml
learning/: __init__.py  cg_num_obects.py  cg_pick_place.py  cg_toy_simple.py  data_models.py  oracle.py  pddlstream_utils.py  poisson_disc_sampling.py  policy.py  visualization.py
lifted/: a_star.py  lifted.py  lpa_star.py  partial.py  sampling.py  search.py  utils.py
panda_station/: README.md  __init__.py  construction_utils.py  grasping_and_placing.py  panda_hand_position_controller.py  panda_station.py  plan_to_trajectory.py  planning_utils.py  stream_utils.py  streams.py  trajectory_director.py  trajectory_generation.py  utils.py
panda_station/models/modified_panda_hand/: package.xml
panda_station/models/modified_panda_hand/sdf/: blocked_panda_hand.sdf  panda_hand.sdf  welded_panda_hand.sdf
tamp_statistics/: __init__.py  plotting.py  process_stats.py
test/: README.md  grasping_testing.py  log_testing.py  meshcat_server.ipynb  model_introspection.ipynb  (+4 more)
(+5418 files in other folders)
