<?xml version="1.0"?>
<package format="2">
  <name>modified_panda_hand</name>
  <version>1.0.0</version>
  <description>Modified SDF models of the franka panda hand</description>
  <maintainer email="support@franka.de">Franka Emika GmbH</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/franka_description</url>
  <url type="repository">https://github.com/frankaemika/franka_ros</url>
  <url type="bugtracker">https://github.com/frankaemika/franka_ros/issues</url>
  <author>Franka Emika GmbH</author>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>
</package>
